<resources>
    <string name="app_name">Msafe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="txt_setup_fragment_label">Setup Fragment</string>
    <string name="txt_signup_fragment_label">Sign up Fragment</string>
    <string name="txt_home_fragment_label">Overview of your files</string>
    <string name="txt_saved_fragment_label">Overview of your  hidden files</string>

    <string name="txt_bt_login">Login with Email</string>

    <!-- Titles of the items in the drawers -->
    <string name="txt_drawer_item_login">Login</string>
    <string name="txt_drawer_item_logout">Logout</string>
    <string name="txt_drawer_item_signup">Signup</string>
    <string name="txt_drawer_item_about">About Msafe</string>
    <string name="txt_drawer_item_settings">Settings</string>

    <string name="txt_drawer_item_home">Home</string>
    <string name="txt_drawer_item_saved">Saved</string>

    <!-- extra description for the titles of the items in the drawers -->
    <string name="txt_drawer_item_home_description">Go to the home page of the Msafe app</string>
    <string name="txt_drawer_item_login_description">Login with existing account</string>
    <string name="txt_drawer_item_logout_description">Logout from your account</string>
    <string name="txt_drawer_item_signup_description">Create a new account</string>
    <string name="txt_drawer_item_about_description">Read about the Msafe app</string>

    <string name="txt_tv_setup_header">mSafe</string>
    <string name="txt_tv_setup_subtitle">Welcome to the mSafe app</string>
    <string name="txt_tv_setup_introduction">Please setup a account. If you are a new user, create a new account by click \"Signup\". Else login with you existing account by clicking \"Login\".</string>
    <string name="txt_tv_rest_password">Forgot your password? Reset your password.</string>
    <string name="txt_tv_account_pf">Upload your profile picture</string>
    <string name="txt_tv_account_name">Change your name</string>
    <string name="txt_bt_signup_email">Sign up using email</string>
    <string name="txt_bt_setup_login">Login</string>
    <string name="txt_bt_loading">Loading, please wait</string>
    <string name="txt_bt_nameChangedSuccess">Update User</string>

    <!-- Text used for the hints around the app -->`
    <string name="txt_hint_email">Email</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_repeat_password">Repeat password</string>
    <string name="txt_last_name">Last Name</string>
    <string name="txt_first_name">First Name</string>
    <string name="txt_et_search_hint">Search for a file</string>

    <!-- Text for the dialogs when logging in and making a account -->
    <string name="txt_dialog_account_made">Account made successfully</string>
    <string name="txt_dialog_account_made_explain">Your Msafe account is made, please see your email to verify your email address</string>

    <string name="txt_dialog_problem_create_account">Could not make account</string>
    <string name="txt_dialog_problem_login">Could not login to the account</string>
    <string name="txt_dialog_problem_verification">Account is not verified</string>
    <string name="txt_dialog_problem_explain">%1$s</string>
    <string name="txt_dialog_problem_verification_explain">The account which you are trying to use is not yet verified. Please check your email and spam box for the verification link.</string>
    <string name="txt_dialog_problem_general">A problem occurred</string>
    <string name="txt_dialog_reset_password">Reset email send</string>
    <string name="txt_dialog_reset_password_explain">A email is send to the specified email address to reset your password</string>
    <string name="txt_dialog_upload_file">Where do you want to store this file?</string>
    <string name="txt_dialog_upload_file_explain">DO you want to store the file in the hidden folder or not?</string>
    <string name="txt_dialog_button_oke">Oke</string>
    <string name="txt_dialog_button_hidden">Hidden folder</string>
    <string name="txt_dialog_button_normal">Normal folder</string>
    <string name="txt_dialog_button_cancel_upload">Cancel upload</string>
    <string name="txt_dialog_button_cancel">Cancel</string>

    <!-- for the alert -->
    <string name="txt_dialog_setup_pin">Please setup your pincode</string>
    <string name="txt_dialog_setup_pin_explain">Please setup your pincode to use the hidden folder. Note: The pin cannot be reset</string>

    <!-- Text for the toast that show in the app -->
    <string name="txt_toast_logging_in">"Logging in</string>
    <string name="txt_toast_no_email">Please fill in a email address</string>
    <string name="txt_toast_could_not_upload">"Could not upload this file"</string>
    <string name="txt_toast_file_downloading">File is being downloaded</string>
    <string name="txt_toast_file_uploading">File is uploading</string>

    <!-- Descriptions for all the image(button)s -->
    <string name="txt_description_im_logo_msafe">A image of the Msafe logo</string>
    <string name="txt_description_ib_search">A image of a magnifying glass, indicating search</string>
    <string name="txt_description_fab_upload_file">A image of uploading something</string>
    <string name="txt_description_im_start">A image that shows that the file is set as favourite</string>
    <!-- Supported file types -->
    <string name="txt_filetype_png">.png</string>
    <string name="txt_filetype_jpeg">.jpeg</string>
    <string name="txt_filetype_pdf">.pdf</string>
    <string name="txt_filetype_docx">.docx</string>

    <!-- Text prompt biometric login screen -->
    <string name="txt_prompt_biometric_login">Biometric login for Msafe</string>
    <string name="txt_prompt_biometric_login_explain">Log in using your biometric credential</string>

    <!-- Text in the item_file -->
    <string name="txt_tv_date_file">Changed on: %1$s</string>
    <string name="txt_description_iv_thumbnail_file">A small images or icon of the type of file</string>
    <string name="txt_description_ib_options_file">list all options regarding the file</string>
    <string name="txt_description_iv_logo">Logo of the company</string>

    <!-- Descriptions for the buttons and titles in accountLayout -->
    <string name="account_settings_title">Account Settings</string>
    <string name="change_button">Change</string>
    <string name="emailError">Invalid Email</string>
    <string name="passwordError">Password is not the same</string>

    <!-- Text when input fields are incorrect -->
    <string name="txt_email_incorrect">Invalid Email</string>
    <string name="txt_passwords_incorrect">Passwords are not the same</string>

    <!-- Text menu items pop-up list -->
    <string name="txt_popup_delete">Delete file</string>
    <string name="txt_popup_move">Move file</string>
    <string name="txt_popup_share">Share file</string>
    <string name="txt_popup_download">Download file</string>
    <string name="txt_popup_set_favourite">Set as favourite</string>
    <string name="txt_popup_unset_favourite">Remove as favourite</string>
</resources>