<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setup.ui.SetupFragment">

    <TextView
        android:id="@+id/tvSetupIntroduction"
        android:layout_width="244dp"
        android:layout_height="33dp"
        android:layout_marginTop="-8dp"
        android:text="@string/txt_tv_setup_subtitle"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <Button
        android:id="@+id/btSetupSignup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_bt_signup_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSetupLogin" />

    <Button
        android:id="@+id/btSetupLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:text="@string/txt_bt_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="357dp"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_tv_setup_introduction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSetupIntroduction" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/txt_description_iv_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo_msafe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>