<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvResetPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setup.ui.LoginFragment">


    <Button
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/txt_bt_login"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLoginPasswordUser" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLoginEmailUser"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_hint_email"
        android:minHeight="48dp"
        android:textColorHint="#616161"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutLoginPasswordUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginEmailUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLoginPasswordUser"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_hint_password"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/btLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLoginEmailUser"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginPasswordUser"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:inputType="textPassword"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/txt_tv_rest_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>