<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setup.ui.SignupFragment">


    <Button
        android:id="@+id/btsignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/txt_bt_signup_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutLoginEmailUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignupEmailUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLoginEmailUser"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_hint_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignupPasswordUserRepeatFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_repeat_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/btsignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLoginEmailUser"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignupPasswordUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>