<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivThumbnailFile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/txt_description_iv_thumbnail_file"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/ivFavouriteFile"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:contentDescription="@string/txt_description_im_start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_star"
                app:tint="@android:color/holo_orange_dark"
                tools:ignore="ImageContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvNameFile"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="@+id/materialCardView"
        tools:text="IMG_20190809_123117.jpg" />

    <TextView
        android:id="@+id/tvDateFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/background_dark"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
        app:layout_constraintStart_toEndOf="@+id/materialCardView"
        tools:text="Changed on: May 12. 2019" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/txt_description_ib_options_file"
        android:fillColor="#333333"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_more_vert" />
</androidx.constraintlayout.widget.ConstraintLayout>